# tglang2

./: README.md
src/: README.md  build.Dockerfile
src/data/model/: model_meta.hpp
src/libtglang/: CMakeLists.txt  tglang.h  tglang_detector.hpp  tglang_preprocessor.hpp
src/libtglang/inference/: onnx.hpp  tflite.hpp
src/report/2023-11-20_17-04-07/: test_results_analysis.txt
src/scripts/: analyse.py  build.sh  test.sh  tester.sh
train/: data.ipynb  playground.ipynb  train.py  vocabulary.txt
train/model/: tf_tglang.py  tglang.py
train/scripts/: load_github.py  parse_stack_comments.py  parse_stack_posts.py
train/scripts/gen_code/: func.py  keywrods.py  libs.py  shell.py  stories.py  tasks.py  tasks2.py  tl.py
train/utils/: convert_tools.py  dataset.py  helper.py  lang_constructs.py  lang_enum.py  preprocess.py  vocab.py
